force-app/main/default/objects/copado__User_Story_Metadata__c/fields/copado__Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>copado__Status_Icon__c</fullName>
    <formula>IMAGE(
CASE(TEXT(copado__Status__c),

&#39;Potential Conflict&#39;, &#39;/resource/&#39; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c=&#39;none&#39;,&#39;&#39;,if(isblank($Setup.copado__Settings__c.copado__Namespace__c),&#39;copado__&#39;,$Setup.copado__Settings__c.copado__Namespace__c)) &amp; &#39;Statics/img/icons/warning16.png&#39;,

&#39;Back Promoted&#39;, &#39;/resource/&#39; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c=&#39;none&#39;,&#39;&#39;,if(isblank($Setup.copado__Settings__c.copado__Namespace__c),&#39;copado__&#39;,$Setup.copado__Settings__c.copado__Namespace__c)) &amp; &#39;Statics/img/icons/warning16.png&#39;,

&#39;Conflict Resolved&#39;, &#39;/resource/&#39; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c=&#39;none&#39;,&#39;&#39;,if(isblank($Setup.copado__Settings__c.copado__Namespace__c),&#39;copado__&#39;,$Setup.copado__Settings__c.copado__Namespace__c)) &amp; &#39;Statics/img/icons/confirm16.png&#39;,

&#39;Under Review&#39;, &#39;/resource/&#39; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c=&#39;none&#39;,&#39;&#39;,if(isblank($Setup.copado__Settings__c.copado__Namespace__c),&#39;copado__&#39;,$Setup.copado__Settings__c.copado__Namespace__c)) &amp; &#39;Statics/img/icons/loading.gif&#39;,

&#39;On Hold&#39;, &#39;/resource/&#39; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c=&#39;none&#39;,&#39;&#39;,if(isblank($Setup.copado__Settings__c.copado__Namespace__c),&#39;copado__&#39;,$Setup.copado__Settings__c.copado__Namespace__c)) &amp; &#39;Statics/img/icons/warning16.png&#39;,

&#39;/s.gif&#39;),

TEXT(copado__Status__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Icon</label>
    <type>Text</type>
</CustomField>